fix: add gap in header menu

--- a/components/ui/header/styles/header.module.css
+++ b/components/ui/header/styles/header.module.css
@@ -26,6 +26,7 @@
 .tabs {
   display: flex;
   align-items: center;
+  gap: 6px;
 }
 
 .tab {
